--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>TechCon 2024</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+  <!-- محتوى الصفحة هنا -->
+</body>
+</html>
