--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -6,6 +6,33 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- محتوى الصفحة هنا -->
+
+  <!-- Header -->
+  <header>
+    <div class="logo">
+      <img src="images/logo.png" alt="TechCon Logo">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Schedule</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Banner -->
+  <section class="banner">
+    <div class="banner-content">
+      <h1>Welcome to TechCon 2024</h1>
+      <p>Join the biggest tech conference of the year!</p>
+      <button class="btn">Register Now</button>
+    </div>
+    <div class="banner-image">
+      <img src="images/banner.png" alt="Banner Image">
+    </div>
+  </section>
+
 </body>
 </html>
