--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -33,6 +33,21 @@
       <img src="images/banner.png" alt="Banner Image">
     </div>
   </section>
+<!-- Quotes Section -->
+<section class="quotes">
+  <div class="quote">
+    <p>"Innovation distinguishes between a leader and a follower."</p>
+    <span>- Steve Jobs</span>
+  </div>
+  <div class="quote">
+    <p>"The best way to predict the future is to invent it."</p>
+    <span>- Alan Kay</span>
+  </div>
+  <div class="quote">
+    <p>"Technology is best when it brings people together."</p>
+    <span>- Matt Mullenweg</span>
+  </div>
+</section>
 
 </body>
 </html>
