--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -48,6 +48,27 @@
     <span>- Matt Mullenweg</span>
   </div>
 </section>
+<!-- Videos List Section -->
+<section class="videos">
+  <h2>Featured Videos</h2>
+  <div class="video-list">
+    <div class="video">
+      <img src="images/video1.png" alt="Video 1">
+      <h3>AI in 2024</h3>
+      <p>Discover the latest in Artificial Intelligence.</p>
+    </div>
+    <div class="video">
+      <img src="images/video2.png" alt="Video 2">
+      <h3>Future of Web</h3>
+      <p>Learn about modern web technologies.</p>
+    </div>
+    <div class="video">
+      <img src="images/video3.png" alt="Video 3">
+      <h3>Space Tech</h3>
+      <p>Explore innovations in space exploration.</p>
+    </div>
+  </div>
+</section>
 
 </body>
 </html>
